# enigma

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  Enigma Docs.html  README.md  docker-compose.yml  package-lock.json  package.json  test_api.sh
crates/database/: Cargo.toml
crates/database/src/: lib.rs  migrations.rs  models.rs  repository.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  endpoint_matcher.rs  errors.rs  handlers.rs  lib.rs  proxy.rs
crates/shared/: Cargo.toml
crates/shared/src/: types.rs
demo/: call.mjs  mock-api.mjs  package-lock.json  package.json
facilitator/: Dockerfile  config.json
programs/enigma/: Cargo.toml
programs/enigma/src/: errors.rs  lib.rs
programs/enigma/src/instructions/: collect_balance.rs  initialize.rs  initialize_user.rs  mod.rs  update_global_config.rs
programs/enigma/src/states/: dev_data.rs  global_config.rs  mod.rs
src/: main.rs
ui/: COSSISTANT_AGPL_NOTICE.md  next.config.ts  package.json  pnpm-lock.yaml
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/[username]/: client.tsx  not-found.tsx  page.tsx
ui/app/[username]/[apiName]/: page.tsx
ui/app/browse/: page.tsx
ui/app/dashboard/: layout.tsx  page.tsx
ui/app/dashboard/[apiName]/: page.tsx
ui/app/dashboard/[apiName]/edit/: page.tsx
ui/app/dashboard/new/: page.tsx
ui/components/: api-browser.tsx  api-detail-view.tsx  auth-modal.tsx  endpoint-docs.tsx  user-avatar.tsx
ui/components/cossistant-landing/: index.tsx  styles.ts
ui/components/dashboard/: api-form.tsx
ui/components/providers/: auth-provider.tsx  wallet-provider.tsx
ui/lib/: api.ts  avatars.ts  enigma-program.ts  openapi.ts  pricing.ts  types.ts
ui/public/: docs.html
ui/public/cossistant/r/: registry.json  support.json
