[workspace]
members = ["programs/*", "crates/*"]
exclude = ["caller"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[package]
name = "enigma_server"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
anyhow = "1.0"
axum = { version = "0.8.7" }
base64 = "0.22.1"
bytes = "1.0"
chrono = { version = "0.4.43", features = ["serde"] }
http = "1.0"
database = { path = "crates/database" }
dotenvy = { version = "0.15.7" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { path = "crates/server" }
shared = { path = "crates/shared" }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "v5", "serde"] }
x402-axum = { version = "1.3.0" }
x402-chain-solana = { version = "1.3.0", features = ["server"] }
x402-types = { version = "1.3" }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
five8_core = { version = "0.1.2", features = ["std"] }
database = { workspace = true }
dotenvy = { workspace = true }
server = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
