[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
database = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
x402-axum = { workspace = true }
x402-chain-solana = { workspace = true }
x402-types = { workspace = true }
http = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
